2009-01-21  Bob Friesenhahn  <bfriesen@simple.dallas.tx.us>

	* coders/bmp.c (ReadBMPImage): Fix assertion thrown for BMP files
	with negative image height values.  Resolves SF issue 2523536 "bug
	in bmp coder".

2008-12-08  Bob Friesenhahn  <bfriesen@simple.dallas.tx.us>

	* coders/tiff.c (ReadTIFFImage): Fix bug with 'ping' mode.

2008-11-19  Bob Friesenhahn  <bfriesen@simple.dallas.tx.us>

	* config/delegates.mgk.in: Since we removed support for 'spawn' a
	long time ago, and no longer execute using the Unix shell by
	default, we need to add an ampersand to the end of the two entries
	previously using 'spawn' so that the display program does not hang
	when it invokes the external program.
	* coders/preview.c (WritePreviewImage): Solarize requires a
	threshold argument.
	* coders/vid.c (WriteVIDImage): Eliminate memory leak.
	* magick/montage.c (MontageImages): Fix continued use of freed
	memory.

2008-11-03  Bob Friesenhahn  <bfriesen@simple.dallas.tx.us>

	* configure.ac: With excessive maintenance releases, the library
	age portion of MAGICK_LIB_VERSION was overflowing its allotted
	space.  This resulted in 1.1.X releases reporting the wrong
	MagickLibVersion as of 1.1.10.  Fix this by supporting up to 99
	values for each field.

2008-11-02  Bob Friesenhahn  <bfriesen@simple.dallas.tx.us>

	* configure.ac: Fix passing the --with-windows-font-dir option via
	DISTCHECK_CONFIG_FLAGS.
	* magick/command.c (ConjureImageCommand): Return status was
	inverted so one was returned for command success rather than zero.

2008-09-12  Bob Friesenhahn  <bfriesen@simple.dallas.tx.us>

	* coders/msl.c: Applied MSL patch from graphicsmagick-bugs list to
	correct handling of geometry x,y values by setting gravity
	attribute to ForgetGravity.

2008-09-03  Bob Friesenhahn  <bfriesen@simple.dallas.tx.us>

	* magick/command.c (BenchmarkImageCommand): Restore original
	client name for each loop so that it is not extended further for
	each iteration.
