@@ -1,3 +1,8 @@
+2009-01-22  Bob Friesenhahn  <bfriesen@simple.dallas.tx.us>
+
+	* coders/dib.c (ReadDIBImage): Fix assertion thrown for DIB files
+	with negative image height values.
+
 2009-01-21  Bob Friesenhahn  <bfriesen@simple.dallas.tx.us>
 
 	* coders/bmp.c (ReadBMPImage): Fix assertion thrown for BMP files
